# posh-tabcomplete

./: Cargo.toml  README.md  out.txt  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
benchmark/: .gitignore  all-3.md  all-s.md  all-z.md  all.md  all2-3.md  all2-s.md  all2-z.md  all2-zOld.md  benchmark_all.ps1  compiled.md  ensureBenchmarkDepsInstalled.ps1  ensurePoshGitInstalled.ps1  setupErrorHandling.ps1  util.ps1
benchmark/complete/: CompleteBaseline.ps1  CompletePoshGit.ps1  CompleteTabComplete.ps1  benchmark_complete.ps1  complete.csv  complete.md
benchmark/init/: benchmark_init.ps1  init.csv  init.md
benchmark/profiles/: BothProfiles.ps1  ProfileTabComplete.ps1
resource/: completions.nu  git.nu  init.ps1
scripts/: watch.ps1
src/: args.rs  completer.rs  lib.rs  main.rs  nu_util.rs
tests/: test_command_names.rs  test_complete.rs  test_complete_aliases.rs  test_complete_bun.rs  test_complete_git.rs  test_complete_npm.rs  test_init.rs  test_testenv.rs
tests/testenv/: additionalFns.ps1  aliases.ps1  mod.rs  other.nu  util.rs
