[package]
name = "posh-tabcomplete"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Blazing fast tab completion for powershell."
repository = "https://github.com/domsleee/posh-tabcomplete"
readme = "README.md"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
itertools = "0.14"
log = "0.4"
nu-cli = "0.101.0"
nu-command = "0.101.0"
nu-cmd-lang = "0.101.0"
nu-engine = "0.101.0"
nu-parser = "0.101.0"
nu-protocol = "0.101.0"
reedline = { version = "0.38.0", features = ["bashisms", "sqlite"] }
regex = "1.10.6"
env_logger = "0.11.5"

[dev-dependencies]
tempfile = "3.12"
rstest = "0.24.0"
rstest_reuse = "0.7.0"
speculoos = "0.11.0"

[[bin]]
name = "posh-tabcomplete"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
